2008-03-08	Nicholas Niro	<nik_89@neuroponic.com>
	* src/misc/bitmap/intern_bitmap.h :
	changed u32 wmult to double wmult so it can correctly
	be used to calculate the number of pixels an image
	line contains.

	* src/misc/bitmap/io.c :
	added an additionnal level of abstraction for byte
	fetching code in order to provide finer grain control
	on the behaviors of the zlib io functions.

	* src/misc/bitmap/process.c :
	fixed the code to load a bitmap with 4 bits per pixels.
	also made proper use of the new double wmult so no longer
	we have unproperly loaded bitmaps.

2008-01-21	Nicholas Niro	<nik_89@neuroponic.com>
	* src/misc :
	Created a new submodule called bitmap in its own
	directory with its own small library.

	* src/misc/bitmap :
	Spread the old bitmap.c file into 3 distinct source
	files : core.c process.c and io.c. They compose
	the now code that is used to load bitmaps from
	bitmap files.

	* configure.ac :
	The script was changed in order to implement the
	new bitmap module.

2007-12-16	Nicholas Niro	<nik_89@neuroponic.com>
	* src/neuro_main.c :
	Implemented a new function (Neuro_SetNeuroDebugFilter) 
	that is to be used by external applications in order to
	set the actual debugging filters used for getting
	outputs from libneuro itself.

2007-12-15	Nicholas Niro	<nik_89@neuroponic.com>
	* autoconf.ac :
	Added an option to disable any video functions from
	libneuro to enable the creation of a light weight 
	version of the API.

	* src/debug.c :
	Removed old debugging methods from the module.

	* src/* :
	Had to fix source files to convert to the new
	debugging methods.

2007-08-18	Nicholas Niro	<nik_89@neuroponic.com>
	* src/debug.c :
	Finished coding the debugging functions 
	Neuro_DebugChannel() and Neuro_CoreDebugSetFilter(),
	they are both fully interfaced by a certain amount
	of macros to make their use easier.

2007-08-17	Nicholas Niro	<nik_89@neuroponic.com>
	* configure.ac :
	Changed the CFlag -ansi to the internationnal 
	one : -std=iso9899:1990.